--- a/buy-ticket-Copy.html
+++ b/buy-ticket-Copy.html
@@ -25,7 +25,8 @@
 <body>
 
 <div class="page-wrapper">
-  <!-- Header Span -->
+ 	
+    <!-- Header Span -->
 
     <span class="header-span"></span>
 
@@ -84,6 +85,8 @@
                                 <li class="dropdown"><a href="speakers.html">Speakers</a></li>
 
                                 <li class="dropdown"><a href="schedule.html">Schedule</a></li>
+								
+								<li class="dropdown"><a href="sponsors.html">Sponsors</a></li>
 
                                 <li class="dropdown"><a href="#">Other Events</a>
 
@@ -113,12 +116,7 @@
 
                     <div class="outer-box">
 
-                        <!--Search Box-->
-
-                        <div class="search-box-btn"><span class="flaticon-search"></span></div>
-
-
-
+ 
                         <!-- Button Box -->
 
                         <div class="btn-box">
@@ -171,10 +169,10 @@
 
     <section class="page-title" style="background-image:url(images/main-slider/scrum-pages-2.png);">
         <div class="auto-container">
-            <h1>Buy Ticket</h1>
+            <h1>Buy Tickets</h1>
             <ul class="bread-crumb clearfix">
                 <li><a href="index.html">Home</a></li>
-                <li>Buy Ticket</li>
+                <li>Buy Tickets</li>
             </ul>
         </div>
     </section>
@@ -200,7 +198,7 @@
 
             <div class="sec-title text-center">
 
-                <span class="title">Get Ticket</span>
+                <span class="title">Buy Tickets</span>
 
                 <h2>Choose a Ticket</h2>
 
@@ -442,9 +440,7 @@
     </section>
     <!--End Pricing Section -->
 
-    <!--End Pricing Section -->
-
-   <!-- Subscribe Section -->
+    <!-- Subscribe Section -->
 
     <section class="subscribe-section">
 
@@ -502,9 +498,7 @@
 
     <!--End Subscribe Section -->
 
-
-
-<!-- Main Footer -->
+ <!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -570,13 +564,16 @@
 
                                         <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
 
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="#">FAQs</a></li>
+										
+										<li><a href="contact.html">Contact Us</a></li>
+
                                     </ul>
 
                                 </div>
@@ -625,7 +622,7 @@
 
                                                 <span class="icon flaticon-phone"></span>
 
-                                                <div class="text"><a href="tel:+1-345-5678-77">+91 9873608216</a></div>
+                                                <div class="text"><a href="tel:+91 9820628506">+91 9820628506</a></div>
 
                                             </li>
 
@@ -667,7 +664,7 @@
 
                                 <div class="footer-widget instagram-widget">
 
-                                     <h2 class="widget-title">Gallery</h2>
+                                    <h2 class="widget-title">Gallery</h2>
 
                                     <div class="widget-content">
 
@@ -717,6 +714,7 @@
 
                                             </figure>
 
+
                                         </div>
 
                                     </div>
@@ -747,7 +745,7 @@
 
                     <div class="copyright-text">
 
-                        <p>XEBIA GROUP © 2021  I  ALL RIGHTS RESERVED  I  XEBIA.COM </p>
+                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
 
                     </div>
 
@@ -762,11 +760,9 @@
     <!-- End Footer -->
 
 
-
 </div>
 
 <!--End pagewrapper-->
-
 <!--Search Popup-->
 
 <div id="search-popup" class="search-popup">
