--- a/gallery.html
+++ b/gallery.html
@@ -115,12 +115,6 @@
 
                     <div class="outer-box">
 
-                        <!--Search Box-->
-
-                        <div class="search-box-btn"><span class="flaticon-search"></span></div>
-
-
-
                         <!-- Button Box -->
 
                         <div class="btn-box">
@@ -279,7 +273,7 @@
     </section>
     <!--End Gallery Section -->
 
-     <!-- Subscribe Section -->
+    <!-- Subscribe Section -->
 
     <section class="subscribe-section">
 
@@ -337,9 +331,7 @@
 
     <!--End Subscribe Section -->
 
-
-
-<!-- Main Footer -->
+ <!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -405,13 +397,16 @@
 
                                         <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
 
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="#">FAQs</a></li>
+										
+										<li><a href="contact.html">Contact Us</a></li>
+
                                     </ul>
 
                                 </div>
@@ -460,7 +455,7 @@
 
                                                 <span class="icon flaticon-phone"></span>
 
-                                                <div class="text"><a href="tel:+1-345-5678-77">+91 9873608216</a></div>
+                                                <div class="text"><a href="tel:+91 9820628506">+91 9820628506</a></div>
 
                                             </li>
 
@@ -502,7 +497,7 @@
 
                                 <div class="footer-widget instagram-widget">
 
-                                     <h2 class="widget-title">Gallery</h2>
+                                    <h2 class="widget-title">Gallery</h2>
 
                                     <div class="widget-content">
 
@@ -552,6 +547,7 @@
 
                                             </figure>
 
+
                                         </div>
 
                                     </div>
@@ -582,7 +578,7 @@
 
                     <div class="copyright-text">
 
-                        <p>XEBIA GROUP © 2021  I  ALL RIGHTS RESERVED  I  XEBIA.COM </p>
+                        <p>©2021 Scrum Day Bengaluru I All Rights Reserved </p>
 
                     </div>
 
@@ -596,7 +592,9 @@
 
     <!-- End Footer -->
 
+
 </div>
+
 <!--End pagewrapper-->
 
 <!--Search Popup-->
