--- a/about-us.html
+++ b/about-us.html
@@ -281,131 +281,43 @@
 
 
 
-    <!-- Fun Fact Section -->
+   <!-- Why Choose Us -->
 
-    <section class="fun-fact-section style-two" style="background-image: url(images/main-slider/scrum-pages-2.png);">
-
-        <div class="auto-container">
-
-            <div class="fact-counter">
-
-                <div class="row clearfix">
-
-
-
-                    <!--Column-->
-
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
-
-                        <div class="count-box">
-
-                            <span class="icon icon_headphones"></span>
-
-                            <span class="count-text" data-speed="3000" data-stop="190">0</span>
-
-                            <h4 class="counter-title">Participants</h4>
-
-                        </div>
-
-                    </div>
-
-
-
-                    <!--Column-->
-
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
-
-                        <div class="count-box">
-
-                            <span class="icon icon_ribbon_alt"></span>
-
-                            <span class="count-text" data-speed="3000" data-stop="62">0</span>
-
-                            <h4 class="counter-title">Awards Win</h4>
-
-                        </div>
-
-                    </div>
-
-
-
-                    <!--Column-->
-
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
-
-                        <div class="count-box">
-
-                            <span class="icon icon_like"></span>
-
-                            <span class="count-text" data-speed="3000" data-stop="54">0</span>
-
-                            <h4 class="counter-title">Certified Teachers</h4>
-
-                        </div>
-
-                    </div>
-
-
-
-                    <!--Column-->
-
-                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">
-
-                        <div class="count-box">
-
-                            <span class="icon icon_book_alt"></span>
-
-                            <span class="count-text" data-speed="3000" data-stop="38">0</span>
-
-                            <h4 class="counter-title">Courses</h4>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-
-    </section>
-
-    <!--End Fun Fact Section -->
-
-
-
-    <!-- Features Section Two -->
-
-    <section class="features-section-two">
+    <section class="why-choose-us">
 
         <div class="auto-container">
-
-            <div class="anim-icons">   
-
-                <span class="icon twist-line-1 wow zoomIn"></span>
-
-                <span class="icon twist-line-2 wow zoomIn" data-wow-delay="1s"></span>
-
-                <span class="icon twist-line-3 wow zoomIn" data-wow-delay="2s"></span>
-
-            </div>
-
-
 
             <div class="row">
 
-                <!-- Title Block -->
+                <div class="content-column col-lg-6 col-md-12 col-sm-12 order-2">
 
-                <div class="title-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-
-                    <div class="inner-box">
+                    <div class="inner-column">
 
                         <div class="sec-title">
 
-                            <span class="title">Features</span>
+                            <span class="title">JOIN THE EVENT</span>
 
-                            <h2>Our Feature</h2>
+                            <h2>Why Choose Scrum Day?</h2>
+
+                            <div class="text">Scrum day - Bangalore is a forum for and by the Agility explorers and caretakers of Scrum to have a meaningful conversation about the pragmatic way of adopting Scrum in various contexts and business domains. Scrum DNA is rooted in Complex Adaptive Systems (CAS) theory and thrives on relationship patterns among elements. Scrum is a framework which provides a shared space for emerging relationships" to deliver a valuable product to the customers. Scrum Guide is the rule book. To understand its rules better and learn new strategies, the Scrum community should come together and share their experiential knowledge!</div>
+
+                        </div>
+
+                        <ul class="list-style-one">
+
+                            <li>A platform for all the Agile practitioners across the globe to collaborate.</li>
+
+                            <li>Focus on wonderful theme "Metrics and Measurements: Mirrors of enterprise Mental Models".</li>
+
+                            <li>Measuring the right metrics strengthens the structure of an enterprise to create an engaging environment for the creative people and nurtures the collective intelligence to solve wicked problems.</li>
+
+                            <li>Let's learn from the insights of world-class Agile thought leaders and co-actively explore the diverse perspectives about metrics.</li>
+
+                        </ul>
+
+                        <div class="btn-box">
+
+                            <a href="buy-ticket.html" class="theme-btn btn-style-two"><span class="btn-title">Buy Tickets</span></a>
 
                         </div>
 
@@ -413,91 +325,11 @@
 
                 </div>
 
+                <div class="image-column col-lg-6 col-md-12 col-sm-12">
 
+                    <div class="image-box">
 
-                <!-- Feature Block -->
-
-                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-
-                    <div class="inner-box">
-
-                        <div class="icon-box"><span class="icon flaticon-lecture"></span></div>
-
-                        <h4><a href="about.html">Great Speakers</a></h4>
-
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
-
-                    </div>
-
-                </div>
-
-
-
-                <!-- Feature Block -->
-
-                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-
-                    <div class="inner-box">
-
-                        <div class="icon-box"><span class="icon flaticon-search"></span></div>
-
-                        <h4><a href="about.html">Experience</a></h4>
-
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
-
-                    </div>
-
-                </div>
-
-
-
-                <!-- Feature Block -->
-
-                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
-
-                    <div class="inner-box">
-
-                        <div class="icon-box"><span class="icon flaticon-diamond-1"></span></div>
-
-                        <h4><a href="about.html">Networking</a></h4>
-
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
-
-                    </div>
-
-                </div>
-
-
-
-                <!-- Feature Block -->
-
-                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
-
-                    <div class="inner-box">
-
-                        <div class="icon-box"><span class="icon flaticon-success"></span></div>
-
-                        <h4><a href="about.html">Party</a></h4>
-
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
-
-                    </div>
-
-                </div>
-
-
-
-                <!-- Feature Block -->
-
-                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">
-
-                    <div class="inner-box">
-
-                        <div class="icon-box"><span class="icon flaticon-employee"></span></div>
-
-                        <h4><a href="about.html">New People</a></h4>
-
-                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
+                        <figure class="image"><img src="images/background/3.jpg" alt=""></figure>
 
                     </div>
 
@@ -509,67 +341,10 @@
 
     </section>
 
-    <!--End Features Section -->
-
-     <!-- Subscribe Section -->
-
-    <section class="subscribe-section">
-
-        <div class="auto-container">
-
-            <div class="content-box">
-
-                <div class="row">
-
-                    <div class="title-column col-lg-6 col-md-12">
-
-                        <div class="sec-title">
-
-                            <span class="icon fa fa-envelope"></span>
-
-                            <h2>Subscribe our <br>newsletter</h2>
-
-                        </div>
-
-                    </div>
+    <!-- End Why Choose Us -->
 
 
-
-                    <div class="form-column col-lg-6 col-md-12">
-
-                        <!--Newsletter Form-->
-
-                        <div class="newsletter-form">
-
-                            <form method="post" action="https://scrumdaybangalore.org/">
-
-                                <div class="form-group">
-
-                                    <input type="email" name="field-name" value="" placeholder="Enter Your Email" required>
-
-                                    <button type="submit" class="theme-btn btn-style-three"><span class="btn-title">Subscribe</span></button>
-
-                                </div>
-
-                            </form>
-
-                        </div>
-
-                    </div>
-
-                    
-
-                </div>
-
-            </div>
-
-        </div>
-
-    </section>
-
-    <!--End Subscribe Section -->
-
- <!-- Main Footer -->
+<!-- Main Footer -->
 
     <footer class="main-footer">
 
@@ -633,9 +408,7 @@
 
                                     <ul class="user-links">
 
-                                        <li><a href="https://agilencr.org/">AgileNCR 2021</a></li>
 
-                                        <li><a href="https://rsgpune.org/">RSG Pune 2021</a></li>
 
                                         <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
 
@@ -679,13 +452,7 @@
 
                                         <ul class="contact-list">
 
-                                            <li>
-
-                                                <span class="icon flaticon-clock"></span>
-
-                                                <div class="text">09:00 AM - 06:00 PM</div>
-
-                                            </li>
+ 
 
 
 
@@ -829,6 +596,8 @@
     </footer>
 
     <!-- End Footer -->
+
+
 </div>
 
 <!--End pagewrapper-->
