--- a/chandan-patary.html
+++ b/chandan-patary.html
@@ -168,7 +168,7 @@
 
     <section class="page-title" style="background-image:url(images/main-slider/scrum-pages-2.png);">
         <div class="auto-container">
-            <h1>Speakers</h1>
+            <h1>Chandan Lal Patary</h1>
             <ul class="bread-crumb clearfix">
                 <li><a href="index.html">Home</a></li>
                 <li>Chandan Lal Patary</li>
