--- a/testing.html
+++ b/testing.html
@@ -73,9 +73,9 @@
 
                                     <ul>
 
-                                        <li><a href="https://agilencr.org/">Agile NCR 2021</a></li>
+                                        <li><a href="https://agilencr.org/" target="blank">Agile NCR 2021</a></li>
 
-                                        <li><a href="https://www.rsgpune.org/">Regional Scrum Gathering Pune</a></li>
+                                        <li><a href="https://www.rsgpune.org/" target="blank">Regional Scrum Gathering Pune</a></li>
                                       
                                     </ul>
 
@@ -658,9 +658,9 @@
 
 
 
-                                        <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf">Terms & Conditions</a></li>
+                                        <li><a href="https://scrumdaybangalore.org/Xebia-T%26C.pdf" target="blank">Terms & Conditions</a></li>
 
-                                        <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf">Privacy Policy</a></li>
+                                        <li><a href="https://scrumdaybangalore.org/privacy-policy-xebia-group.pdf" target="blank">Privacy Policy</a></li>
 
                                         <li><a href="#">FAQs</a></li>
 										
