--- a/speakers.html
+++ b/speakers.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
  <html lang="en">
 <head>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RXWLGSQZJ3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RXWLGSQZJ3');
+</script>
+
+
 <meta charset="utf-8">
 <title>Scrum Day Bangalore 2021 - Hosted by Xebia</title>
 <!-- Stylesheets -->
