--- a/speakers.html
+++ b/speakers.html
@@ -259,7 +259,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="stefan-wolpers.html"><img src="images/speaker/Stefan-Wolpers.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="padma-satyamurthy.html"><img src="images/speaker/Padma-Satyamurthy.jpg" alt=""></a></figure> 
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers/stefan-wolpers.html">Stefan Wolpers</a></h4>
